If applied, this commit fix image loading issue.
Added onload function to two main login image and filed image.
Also gave them extra class to make them invisible when it is not loaded.

--- a/src/containers/containers.module.css
+++ b/src/containers/containers.module.css
@@ -19,6 +19,12 @@
 
 .Image {
   height: 100%;
+  
+}
+
+.ImageInvisible {
+  height: 100%;
+  display: none;
 }
 
 .HomeContainer {
